--- a/LibraryServerJava/src/main/resources/application.properties
+++ b/LibraryServerJava/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.data.mongodb.uri = mongodb+srv://teisloyche:pw123@libraryserver.taymbtz.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database = Library
